[package]
name = "afterlife-backend"
version = "0.1.0"
edition = "2021"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
primitive-types = "0.10"
bigdecimal = "0.3"
serde_json = "1.0.107"
tokio-postgres = "0.7"
warp = "0.3"
lazy_static = "1.4.0"
once_cell = "1.18.0"
lru = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
reqwest = "0.11.22"
ethereum-types = "0.14.0"
hex = "0.4.3"
web3 = "0.19.0"
serde_derive = "1.0.190"
fixed-hash = "0.8.0"
tiny-keccak = "2.0.2"
futures = "0.3.28"
indicatif = "0.17.7"
rand = "0.8.5"
ethabi = "18.0.0"
uint = "0.9.5"
eth_checksum = "0.1.2"